[gd_scene load_steps=12 format=3 uid="uid://cvdmayb1i4wj0"]

[ext_resource type="PackedScene" uid="uid://os2nv3m7rgj6" path="res://Scenes/Caravan.tscn" id="1_5cjrv"]
[ext_resource type="Script" uid="uid://wv7m0y56kfol" path="res://Scripts/World.gd" id="1_j0p05"]
[ext_resource type="PackedScene" uid="uid://18mb5e2pg4n8" path="res://Scenes/Goblin.tscn" id="2_q2d71"]
[ext_resource type="Script" uid="uid://cvt0i6b27ll73" path="res://Scripts/Shop.gd" id="3_5nsto"]
[ext_resource type="Script" uid="uid://cwrum8gtm6tte" path="res://Scripts/Btn_OpenShop.gd" id="3_gjpho"]
[ext_resource type="PackedScene" uid="uid://tsi3hgat0nrv" path="res://Scenes/Wolf.tscn" id="3_uo7di"]
[ext_resource type="Script" uid="uid://d2y38mqcwfgb5" path="res://Scripts/UI/GameUI.gd" id="3_y7y61"]
[ext_resource type="Texture2D" uid="uid://dat20xrpfuy7b" path="res://Backgrounds/Gemini_Generated_Image_vpke17vpke17vpke.png" id="5_p70al"]
[ext_resource type="Texture2D" uid="uid://d3rj41u8yshp" path="res://Backgrounds/Gemini_Generated_Image_4zap304zap304zap-removebg-preview.png" id="6_45d1s"]

[sub_resource type="LabelSettings" id="LabelSettings_j0p05"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nsto"]
size = Vector2(50000, 44)

[node name="World" type="Node2D"]
script = ExtResource("1_j0p05")
enemy_scenes = Array[PackedScene]([ExtResource("2_q2d71"), ExtResource("3_uo7di")])

[node name="Caravan" parent="." groups=["Player"] instance=ExtResource("1_5cjrv")]

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("health_bar", "gold_label")]
layer = 100
script = ExtResource("3_y7y61")
health_bar = NodePath("HealthBar")
gold_label = NodePath("GoldLabel")

[node name="GoldLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.116000004
anchor_right = 0.19800001
anchor_bottom = 0.064
offset_left = -0.2400055
offset_right = 0.27999115
offset_bottom = -0.040000916
grow_horizontal = 2
text = "Oro : 0"
label_settings = SubResource("LabelSettings_j0p05")

[node name="Btn_OpenShop" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Negozio
"
script = ExtResource("3_gjpho")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.003
anchor_right = 0.053000003
anchor_bottom = 0.075
offset_left = 0.07999992
offset_right = 6.079998
size_flags_horizontal = 0
value = 100.0

[node name="WaveLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_right = 79.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Ondata 1 - Nemici 5"

[node name="ShopPanel" type="Panel" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = -1
anchor_top = 0.208
anchor_right = 0.93700004
anchor_bottom = 0.9250001
offset_left = -3.0
offset_top = 0.11999512
offset_right = 0.3199463
offset_bottom = -3.0517578e-05
script = ExtResource("3_5nsto")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99500006
anchor_bottom = 1.0
offset_right = 0.014953613
offset_bottom = 3.0

[node name="Label" type="Label" parent="CanvasLayer/ShopPanel/VBoxContainer"]
layout_mode = 2
text = "--- NEGOZIO ---"
horizontal_alignment = 1

[node name="Btn_Damage" type="Button" parent="CanvasLayer/ShopPanel/VBoxContainer"]
layout_mode = 2
text = "Potenzia Danno"
alignment = 0

[node name="Btn_Heal" type="Button" parent="CanvasLayer/ShopPanel/VBoxContainer"]
layout_mode = 2
text = "Ripara Carovana"
alignment = 0

[node name="Btn_Speed" type="Button" parent="CanvasLayer/ShopPanel/VBoxContainer"]
layout_mode = 2
text = "Velocit√† Attacco"
alignment = 0

[node name="Btn_Close" type="Button" parent="CanvasLayer/ShopPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.02745098, 1)
text = "CHIUDI NEGOZIO"

[node name="BtnStartWave" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -15.5
offset_right = 49.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Wave"

[node name="Pavimento" type="StaticBody2D" parent="."]
position = Vector2(0, 70)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pavimento"]
position = Vector2(25000, 21)
shape = SubResource("RectangleShape2D_5nsto")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(465, 5)

[node name="Background_Sky" type="Parallax2D" parent="."]
z_index = -100
scale = Vector2(0.1, 0.1)
repeat_size = Vector2(8000, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background_Sky"]
position = Vector2(-1200, -1810)
scale = Vector2(3, 3)
texture = ExtResource("5_p70al")
centered = false

[node name="Background_Road" type="Parallax2D" parent="."]
z_index = -10
repeat_size = Vector2(1338, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background_Road"]
position = Vector2(690.00006, 167)
scale = Vector2(2.4633784, 0.99731904)
texture = ExtResource("6_45d1s")

[connection signal="pressed" from="CanvasLayer/ShopPanel/VBoxContainer/Btn_Damage" to="CanvasLayer/ShopPanel" method="_on_btn_damage_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopPanel/VBoxContainer/Btn_Heal" to="CanvasLayer/ShopPanel" method="_on_btn_heal_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopPanel/VBoxContainer/Btn_Speed" to="CanvasLayer/ShopPanel" method="_on_btn_speed_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopPanel/VBoxContainer/Btn_Close" to="CanvasLayer/ShopPanel" method="_on_btn_close_pressed"]
[connection signal="pressed" from="CanvasLayer/BtnStartWave" to="." method="_on_btn_start_wave_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
